Use C99 {u}intN_t types rather than BSD {u_}intN_t types.
We can get them on any sufficiently modern UN*X, as they provide
<inttypes.h>.  We can get them with MSVC, by including <inttypes.h> on
newer versions or defining them ourselves in older versions.  We can get
them with various development environments on MS-DOS.

Add a pcap/pcap-inttypes.h header file that does what's necessary to get
them defined, and include that in the pcap/*.h headers that use those
types.

Have pcap-types.h only include what's necessary to get u_int defined.

--- a/Makefile.in
+++ b/Makefile.in
@@ -106,6 +106,7 @@ PUBHDR = \
 	pcap/can_socketcan.h \
 	pcap/dlt.h \
 	pcap/funcattrs.h \
+	pcap/pcap-inttypes.h \
 	pcap/ipnet.h \
 	pcap/namedb.h \
 	pcap/nflog.h \
