--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,16 @@ check_function_exists(snprintf HAVE_SNPRINTF)
 check_function_exists(vsnprintf HAVE_VSNPRINTF)
 check_function_exists(strtok_r HAVE_STRTOK_R)
 
+# Find library needed for gethostbyname.
+check_function_exists("gethostbyname" HAVE_GETHOSTBYNAME)
+if(NOT HAVE_GETHOSTBYNAME)
+    message(STATUS "gethosbyname not found in standard libraries, checking libnsl)
+    check_library_exists("nsl" "gethostbyname" "" LIB_NSL_HAS_GETHOSTBYNAME)
+    if (LIB_NSL_HAS_GETHOSTBYNAME)
+        set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} lnsl)
+    endif()
+endif()
+
 #
 # Data types.
 #
