Set HAVE_GETIFADDRS no matter where we found it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -522,6 +522,7 @@ if(NOT WIN32)
             check_library_exists(socket getifaddrs "" SOCKET_HAS_GETIFADDRS)
             if(SOCKET_HAS_GETIFADDRS)
                 set(PCAP_LINK_LIBRARIES socket ${PCAP_LINK_LIBRARIES})
+                set(HAVE_GETIFADDRS)
             endif()
         endif()
         if(HAVE_GETIFADDRS)
