--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -522,7 +522,7 @@ if(NOT WIN32)
             check_library_exists(socket getifaddrs "" SOCKET_HAS_GETIFADDRS)
             if(SOCKET_HAS_GETIFADDRS)
                 set(PCAP_LINK_LIBRARIES socket ${PCAP_LINK_LIBRARIES})
-                set(HAVE_GETIFADDRS)
+                set(HAVE_GETIFADDRS TRUE)
             endif()
         endif()
         if(HAVE_GETIFADDRS)
