We have to check for sys/sockio.h, at least on Solaris.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ if(NOT HAVE_UNISTD_H)
 endif(NOT HAVE_UNISTD_H)
 check_include_file(bitypes.h HAVE_SYS_BITYPES_H)
 check_include_file(sys/ioccom.h HAVE_SYS_IOCCOM_H)
+check_include_file(sys/sockio.h HAVE_SYS_SOCKIO_H)
 check_include_file(sys/select.h HAVE_SYS_SELECT_H)
 check_include_file(limits.h HAVE_LIMITS_H)
 check_include_file(netpacket/packet.h HAVE_NETPACKET_PACKET_H)
