Move have_siocglifconf.c to the cmake directory.
It's used by CMake, so put it in the cmake directory along with other
CMake-related stuff.

--- a/Makefile.in
+++ b/Makefile.in
@@ -283,7 +283,7 @@ EXTRA_DIST = \
 	cmakeconfig.h.in \
 	cmake/FindLFS.cmake \
 	cmake/FindPacket.cmake \
-	config/have_siocglifconf.c \
+	cmake/have_siocglifconf.c \
 	config.guess \
 	config.h.in \
 	config.sub \
